Development Portal (2015-09-25 shi)
==============================
Change 'Missing' to 'Other'
Update 'Other' projects description
Updated translations


Development Portal (2015-09-10 shi)
==============================
Map link minor CSS fix


Development Portal (2015-09-03 shi)
==============================
Changed settings text visible next to cog icon
Changed View map link on main pages to entire div
Hide beige alert across site
Fixed lists in SAVi for Firefox (CSS counters)
Search view margin fix


Development Portal (2015-09-02 shi)
==============================
Changed BETA to badge status
Updated new badge status across site
Fix Generator layout issues


Development Portal (2015-07-24 shi)
==============================
Reorganised Search queries layout
Added translations for Search
Fixed layout for main and minimised versions
Added CSS for Print-Friendly version
Added icons for Print-Friendly version
Fixed background image for Search
Fixed Search and Settings css for rgba styles
Added Year range selectors


Development Portal (2015-07-23 shi)
==============================
Added translations for Search
Added Search headers for main pages
Added classes to Search columns
Optimised Search layout
Added buttons and new info text for Search


Development Portal (2015-06-24 shi)
==============================
Temporary fix mobile view
Added icons to Search dropdown
Added footnote to SAVi for published currencies
Added translations for footnotes in SAVi
Added IATI year to piecharts


Development Portal (2015-06-23 shi)
==============================
Added initial page layout for Search
Added labels to search
Clean up CSS for Search
Added icons for Search and labels
Added translation for Change Settings text


Development Portal (2015-06-18 shi)
==============================
Added settings dropdown buttons and link
Added translations for settings text
Fixed about page options
Added settings icon for themes
Hide breadcrumbs on country / publisher landing 