@@ -98,10 +98,9 @@ span.span_description description:last-of-type		{padding-bottom:40px;}
 result						{display:block; padding:20px 0 40px 0;}
 result:nth-child(odd)		{background-color:rgba(0,14,32,0.3);}
 result description			{display:block; padding:0 40px 20px 40px; line-height:1.25em; white-space:pre-line; unicode-bidi:embed;}
-result description			{padding:20px 40px;}
-result description:before	{content:"RESULT"; font-size:14px; color:#ccc; display:block; line-height:0.5em;}
+result description			{padding:0 40px;}
 result span-title			{display:block; font-size:30px; width:880px; padding:20px 0 10px 0; margin:0 auto; color:#FFF;}
-result span-title:before	{content:"PROJECT TITLE"; font-size:14px; color:#ccc; display:block; margin-bottom:15px;}
+result span-title:before	{content:"RESULT"; font-size:14px; color:#ccc; display:block; margin-bottom:15px;}
 
 /*
 result indicator			{display:block; padding:20px 40px; border-top:1px solid #1E90FF;}
